modulo completo curso y asistencias

--- a/src/app/modules/docente-capacitador/edit-list-asistencia/pages/edit-list-asistencia/edit-list-asistencia.component.html
+++ b/src/app/modules/docente-capacitador/edit-list-asistencia/pages/edit-list-asistencia/edit-list-asistencia.component.html
@@ -116,9 +116,9 @@
         <!-- Breadcrumb -->
         <nav aria-label="breadcrumb" class="main-breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false; showContainer3 = false; showContainer4 = false">Cursos</a></li>
-                <li class="breadcrumb-item"><a (click)="showContainer1 = false; showContainer2 = true; showContainer3 = false; showContainer4 = false">Estudiantes</a></li>
-                <li class="breadcrumb-item"><a (click)="showContainer1 = false; showContainer2 = false; showContainer3 = true; showContainer4 = false">Faltas</a></li>
+                <li class="breadcrumb-item"><a (click)="mostrarCurso()">Cursos</a></li>                
+                  <li class="breadcrumb-item"><a (click)="mostrarEstudiantes()">Estudiantes</a></li>
+                <li class="breadcrumb-item"><a (click)="mostrarFaltas()">Faltas</a></li>
                 <li class="breadcrumb-item"><a >Justificar</a>
                 </li>
             </ol>
