--- a/src/app/modules/docente-capacitador/register-curso/pages/register-curso/register-curso.component.html
+++ b/src/app/modules/docente-capacitador/register-curso/pages/register-curso/register-curso.component.html
@@ -7,38 +7,59 @@
                     <div class="row">
                         <div class="form-group col-md-4">
                             <label>Código</label>
-                            <input type="text" class="form-control" formControlName="curCodigo" [(ngModel)]="cursoSeleccionado.curCodigo" required>
+                            <input type="text" class="form-control" formControlName="curCodigo"
+                                [(ngModel)]="cursoSeleccionado.curCodigo" required>
                         </div>
 
                         <div class="form-group col-md-8">
                             <label>Nombre del Curso/Capacitación</label>
-                            <input type="text" class="form-control" formControlName="curNombre" [(ngModel)]="cursoSeleccionado.curNombre" required>
+                            <input type="text" class="form-control" formControlName="curNombre"
+                                [(ngModel)]="cursoSeleccionado.curNombre" required>
                         </div>
                     </div>
 
                     <div class="mt-4 row">
                         <div class="col-md-4">
                             <label>Fecha de Inicio</label>
-                            <input type="date" class="form-control" formControlName="curFechainicio" [(ngModel)]="cursoSeleccionado.curFechainicio" required>
+                            <input type="date" class="form-control" formControlName="curFechainicio"
+                                [(ngModel)]="cursoSeleccionado.curFechainicio" required>
                         </div>
                         <div class="col-md-4">
                             <label>Fecha de Finalización</label>
-                            <input type="date" class="form-control" formControlName="curFechafin" [(ngModel)]="cursoSeleccionado.curFechafin" required>
+                            <input type="date" class="form-control" formControlName="curFechafin"
+                                [(ngModel)]="cursoSeleccionado.curFechafin" required>
                         </div>
                         <div class="col-md-4">
                             <label>Número de horas del curso</label>
-                            <input type="number" class="form-control" formControlName="curNumHoras" [(ngModel)]="cursoSeleccionado.curNumhoras" required>
+                            <input type="number" class="form-control" formControlName="curNumHoras"
+                                [(ngModel)]="cursoSeleccionado.curNumhoras" required>
                         </div>
                     </div>
                     <br>
                     <div class="form-group">
                         <label for="curProceso">Proceso</label>
-                        <select class="form-control" formControlName="curProceso" [(ngModel)]="cursoSeleccionado.curProceso" required>
+                        <select class="form-control" formControlName="curProceso"
+                            [(ngModel)]="cursoSeleccionado.curProceso" required>
                             <option value="" disabled selected hidden>Seleccione una opción</option>
                             <option value="En Proceso">En Proceso</option>
                             <option value="Finalizado">Finalizado</option>
                             <option value="Próximamente">Próximamente</option>
                         </select>
+                    </div>
+                    <div class="p-col-3 p-md-4">
+                        <span class="p-float-label">
+                            <input (change)="imageSelected($event)" formControlName="foto" accept="image/*"
+                                name="foto" type="file" class="form-control" id="float-input" required />
+                            <label for="float-input"></label>
+                        </span>
+                        <div *ngIf="file" class="mt-3 text-center">
+                            <img [src]="file" class="rounded" alt="..." style="max-width: 30%;" />
+                        </div>
+                        <div>
+                            <img alt="..."
+                                style="max-width: 30%; visibility: hidden; width: 0px; height: 0px;"
+                                [src]="'http://localhost:5000/image/images/' + cursoSeleccionado.curFoto" />
+                        </div>
                     </div>
                     <div class="form-group">
                         <label>Seleccione el programa al que pertenece el curso de capacitación:</label>
@@ -105,7 +126,7 @@
 
                 </div>
             </div>
-            <button (click)="crearcurso()" type="submit" class="btn btn-primary">Guardar</button>
+            <button (click)="crearcurso()" type="submit" class="btn btn-primary">Guardar</button>       
         </form>
     </div>
     <br>
@@ -117,6 +138,7 @@
     </div>
 
     <br>
+    <div class="container table-container">
     <h2>Listado Cursos</h2>
     <table class="table">
         <thead>
@@ -129,6 +151,7 @@
                 <th scope="col">Programa</th>
                 <th scope="col">Modalidad</th>
                 <th scope="col">Tipo de Curso</th>
+                <th scope="col">Foto</th>
             </tr>
         </thead>
         <tbody>
@@ -144,8 +167,11 @@
                     <td>{{ curso?.programaCapacitacion?.pcaNombre }}</td>
                     <td>{{ curso?.mcursos?.mcuNombre }}</td>
                     <td>{{ curso?.tipoCurso?.tcuNombre }}</td>
+                        <td><img [src]="curso.curFoto" alt="Imagen"></td>
+                      
                 </tr>
             </ng-container>
         </tbody>
     </table>
+    </div>
 </div>
