--- a/src/app/modules/administrador/edit-list-profesor/pages/edit-list-profesor/edit-list-profesor.component.html
+++ b/src/app/modules/administrador/edit-list-profesor/pages/edit-list-profesor/edit-list-profesor.component.html
@@ -1,1 +1,157 @@
-<p>edit-list-profesor works!</p>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <title>Administradores</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="my-4">Lista Usuarios Activos</h1>
+      <div class="form-group">
+        <label for="buscar">Buscar:</label>
+        <input
+          type="text"
+          class="form-control"
+          id="buscar"
+          name="buscar"
+          (input)="updateSearchTerm($event)"
+        />
+      </div>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Cédula</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Apellido</th>
+            <th scope="col">Email</th>
+            <th scope="col">Usuario</th>
+            <th scope="col">Rol</th>
+            <th scope="col">Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let usuario of filterUsuarios()">
+            <td scope="row">{{ usuario.persona?.cedula }}</td>
+            <td>{{ usuario.persona?.nombre }}</td>
+            <td>{{ usuario.persona?.apellido }}</td>
+            <td>{{ usuario.persona?.email }}</td>
+            <td>{{ usuario.username }}</td>
+            <td *ngIf="usuario.rol">{{ usuario.rol.rolNombre }}</td>
+            <td>
+              <button
+                type="button"
+                class="btn btn-primary me-2"
+                (click)="editUsuario(usuario)"
+              >
+                <i class="fa-solid fa-pen-to-square"></i>
+              </button>
+              <button
+                title="Desactivar Usuario"
+                *ngIf="usuario.enabled"
+                type="button"
+                class="btn btn-danger"
+                (click)="
+                  usuario.rol &&
+                    usuario.rol.id_rol &&
+                    usuario.id_usuario &&
+                    desactivarUsuario(
+                      usuario.id_usuario,
+                      usuario
+                    )
+                "
+              >
+                <i class="fa-solid fa-circle-xmark"></i>
+              </button>
+              <button
+                title="Activar Usuario"
+                *ngIf="!usuario.enabled"
+                type="button"
+                class="btn btn-success"
+                (click)="
+                  usuario.rol &&
+                    usuario.rol.id_rol &&
+                    usuario.id_usuario &&
+                    activarUsuario(
+                      usuario.id_usuario,
+                      usuario
+                    )
+                "
+              >
+                <i class="fa-solid fa-circle-check"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="editModal"
+      tabindex="-1"
+      aria-labelledby="editModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editModalLabel">Editar usuario</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nombre" />
+              </div>
+              <div class="mb-3">
+                <label for="apellido" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="apellido" />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" />
+              </div>
+              <div class="mb-3">
+                <label for="username" class="form-label">Usuario</label>
+                <input type="text" class="form-control" id="username" />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancelar
+            </button>
+            <button
+              id="saveChangesButton"
+              (click)="saveChanges()"
+              type="button"
+              class="btn btn-primary"
+            >
+              Guardar
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
