--- a/src/app/modules/docente-capacitador/register-fotografico/pages/register-fotografico/register-fotografico.component.css
+++ b/src/app/modules/docente-capacitador/register-fotografico/pages/register-fotografico/register-fotografico.component.css
@@ -1,6 +1,70 @@
 #preview {
-    max-width: 300px;
-    max-height: 300px;
-    object-fit: contain;
-  }
-  
+  max-width: 300px;
+  max-height: 300px;
+  object-fit: contain;
+}
+body {
+  margin-top: 20px;
+  background: #fafafa;
+}
+.order-card {
+  color: #fff;
+}
+
+.bg-c-blue {
+  background: linear-gradient(45deg, #4099ff, #73b4ff);
+}
+
+.bg-c-green {
+  background: linear-gradient(45deg, #2ed8b6, #59e0c5);
+}
+
+.bg-c-yellow {
+  background: linear-gradient(45deg, #ffb64d, #ffcb80);
+}
+
+.bg-c-pink {
+  background: linear-gradient(45deg, #ff5370, #ff869a);
+}
+
+.card {
+  border-radius: 10px;
+  -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+  box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+  border: none;
+  margin-bottom: 30px;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.card .card-block {
+  padding: 25px;
+}
+
+.order-card i {
+  font-size: 30px;
+}
+
+.f-left {
+  float: left;
+}
+
+.f-right {
+  float: right;
+}
+.val {
+  font-size: 10px;
+}
+.col-md-4 {
+  /* max-width: 70.333333%; */
+  min-width: 30%;
+}
+
+.sin-borde {
+  border: none;
+}
+
+.btn {
+  margin: 5px;
+  padding: 5px;
+}
